@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Improved handling of composed keys in OS X 10.5 and up
 	- Updated the bundled libpng to v1.2.33.
 	- Fixed callback would not be called when shortcut was used with
           radio and toggle buttons in default FL_RELEASE mode.
